# kuintessence

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  README.zh-hans.md  all  contributing.md  contributing.zh-hans.md  readme.md  readme.zh-hans.md  rustfmt.toml
app/: Cargo.toml
app/graphql/: query.gql
app/src/: server.rs
app/src/api/: dtos.rs  file_storage.rs  mod.rs  text_storage.rs  usecase_editor.rs  workflow_editor.rs  workflow_engine.rs  ws.rs
app/src/infrastructure/: config.rs  internal_message_consumer.rs  service_provider.rs  websocket_message_consumer.rs  ws_session_opener.rs
app/src/infrastructure/database/: mod.rs  orm.rs  redis.rs  sea.rs
app/src/infrastructure/repository/storage/: file.rs  file_meta.rs  move_registration.rs  multipart.rs  net_disk.rs  server.rs  snapshot.rs  text.rs
app/src/infrastructure/repository/workflow/: installed_software.rs  node_instance.rs  queue.rs  software_block_list.rs  task.rs  workflow_draft.rs  workflow_instance.rs
app/src/infrastructure/service/: file_upload_runner.rs  inner_usecase_select_service.rs  minio_server_broker.rs
app/src/infrastructure/websocket/: manager.rs  session.rs
domain/content-repo/: Cargo.toml
domain/content-repo/src/: exception.rs  lib.rs
domain/content-repo/src/model/: mod.rs
domain/content-repo/src/repository/: mod.rs  package.rs
domain/content-repo/src/service/: mod.rs  node_draft.rs  software_computing_usecase.rs
domain/storage/: Cargo.toml
domain/storage/src/: command.rs  lib.rs  mock.rs
domain/storage/src/exception/: mod.rs
domain/storage/src/model/vo/: mod.rs  (+6 more)
domain/storage/src/repository/: file.rs  meta.rs  mod.rs  move_record.rs  multipart.rs  net_disk.rs  realtime.rs  snapshot.rs  text.rs
domain/storage/src/service/: cache.rs  content_extractor.rs  meta_storage_record.rs  mover.rs  multipart.rs  net_disk.rs  realtime.rs  snapshot.rs  storage_server_broker.rs  storage_server_download_dispatcher.rs  storage_server_resource.rs  storage_server_upload_dispatcher.rs  text.rs
domain/workflow/: Cargo.toml
domain/workflow/src/: lib.rs  mock.rs
domain/workflow/src/exception/: mod.rs
domain/workflow/src/repository/: installed_software.rs  mod.rs  node_instance.rs  read_only_by_queue.rs  snapshot.rs  software_block_list.rs  task.rs  workflow_instance.rs
domain/workflow/src/service/: control.rs  mod.rs  queue_resource.rs  schedule.rs  software_deployment.rs  status.rs  status_receiver.rs  task_distribution.rs  task_status_receiver.rs  usecase.rs  workflow.rs
service/storage/: Cargo.toml
service/storage/src/: cache.rs  content_extractor.rs  lib.rs  meta.rs  mover.rs  multipart.rs  net_disk.rs  realtime.rs  server_download_dispatcher.rs  server_upload_dispatcher.rs  snapshot.rs  storage_server_resource.rs  text.rs
service/storage/tests/: mod.rs  test_text
src/agent/app/: Cargo.toml
src/agent/app-core/: Cargo.toml
src/agent/app-core/src/: lib.rs  repository.rs
src/agent/app/src/: config.rs  dtos.rs  main.rs  server.rs
src/agent/domain/: Cargo.toml
src/agent/domain/src/: command.rs  lib.rs  repository.rs
src/agent/service/: Cargo.toml
src/agent/service/src/: collection_task.rs  deploy_software.rs  lib.rs  run_job.rs  task_scheduler.rs
src/app/: Cargo.toml
src/app/src/: server.rs
src/app/src/api/: agent.rs  file_storage.rs  mod.rs  snapshot.rs  text_storage.rs  usecase_editor.rs  workflow_editor.rs  workflow_engine.rs  ws.rs
src/app/src/infrastructure/: config.rs  http_client.rs  internal_message_consumer.rs  mod.rs  service_provider.rs
src/architecture/: Cargo.toml
src/architecture/src/: exceptions.rs  lib.rs  model.rs
src/architecture/src/authorization/: mod.rs  payload.rs
src/architecture/src/base_dto/: mod.rs
src/architecture/src/hosting/: background_service.rs  mod.rs
src/architecture/src/message_queue/: consumer.rs  mod.rs  producer.rs
src/architecture/src/repository/: default_implement.rs  lease_repository.rs  mod.rs  mutable_repository.rs  read_only_repository.rs
src/billing-system/billing-system/: Cargo.toml
src/billing-system/billing-system-kernel/: Cargo.toml
src/billing-system/billing-system-kernel/src/: lib.rs
src/billing-system/billing-system/src/: main.rs
src/co/: Cargo.toml
src/co/src/: main.rs
src/co/src/controllers/: file_storage.rs  mod.rs  snapshot.rs  text_storage.rs  usecase_editor.rs  workflow_editor.rs  workflow_engine.rs  ws.rs
src/co/src/infrastructure/: config.rs  host.rs  http_client.rs  mod.rs  service_provider.rs  web_server.rs
src/co/src/internal_message_consumers/: mod.rs
src/database/migration/: Cargo.toml  config.yaml
src/database/migration/src/: main.rs
src/database/model/: Cargo.toml
src/database/model/src/: lib.rs  utils.rs
src/domain/content-repo/: Cargo.toml
src/domain/content-repo/src/: exception.rs
src/domain/storage/: Cargo.toml
src/domain/storage/src/: command.rs
src/domain/workflow/: Cargo.toml
src/infrastructure/: Cargo.toml
src/infrastructure/command/src/: lib.rs
src/infrastructure/src/: lib.rs
src/infrastructure/src/config/: mod.rs
src/infrastructure/src/data/: db.rs
src/infrastructure/src/hosting/: mod.rs
src/infrastructure/src/message_queue/: internal_message_queue_producer.rs  kafka_message_queue_producer.rs  mod.rs
src/infrastructure/src/middleware/: authorization.rs  http_request_timeout.rs  mod.rs
src/infrastructure/src/telemetry/: config.rs  mod.rs
src/lib-co-repo/: Cargo.toml
src/lib-co-repo/src/: exceptions.rs  lib.rs
src/lib-co-repo/src/client/: graphql.rs  mod.rs
src/lib-co-repo/src/dtos/: mod.rs  node_ability_kind.rs  node_draft.rs
src/lib-co-repo/src/models/: command_preview.rs  mod.rs  package.rs  software_computing_usecase.rs
src/lib-co-repo/src/services/: mod.rs  package_validate.rs  parse_node.rs
src/service/workflow/: Cargo.toml
src/service/workflow/src/: lib.rs  queue_resource.rs  schedule.rs  software_deployment.rs  status_receiver.rs  task_distribution.rs  workflow.rs
src/web-macro/: Cargo.toml
src/web-macro/src/: authorize.rs  http_request.rs  lib.rs  message_consumer.rs
(+590 files in other folders)
