[workspace]
resolver = "2"
members = [ "src/agent/*", "src/architecture", "src/co", "src/database/*", "src/infrastructure", "src/kernel", "src/lib-co-repo", "src/web-macro", "src/billing-system/*", "src/architecture-macro" ]
[workspace.dependencies]
# The version of tracing-opentelemetry, tonic-build, tonic, prost-types, prost, opentelemetry-otlp, opentelemetry, etcd-client
# cannot be changed, because once change, it will require protoc.
agent-core = { path = "src/agent/app-core" }
alice-architecture = { path = "src/architecture" }
alice-core = { path = "src/api-server/app-core" }
alice-di = { path = "src/di" }
alice-di-macro = { path = "src/di-macro" }
alice-infrastructure = { path = "src/infrastructure" }
alice-protocol = { path = "src/api-server/app-protocol" }
alice-web-macro = { path = "src/web-macro" }
billing-system-kernel = { path = "src/billing-system/billing-system-kernel" }
database-model = { path = "src/database/model" }
kernel = { path = "src/kernel" }
lib-co-repo = { path = "src/lib-co-repo" }
actix-cors = "0.6.4"
actix-easy-multipart = "3.0.0"
actix-http = "3.3.1"
actix-rt = "2.8.0"
actix-web = "4.3.1"
actix-ws = "0.2.5"
anyhow = "1.0.70"
async-trait = "0.1.68"
awc = "3.1.1"
base64 = "0.21.0"
blake3 = "1.3.3"
bytes = "1.4.0"
chrono = "0.4.24"
clap = "4.2.1"
cmake = "0.1.50"
colored = "2.0.0"
config = "0.13.3"
csv = "1.2.1"
ctrlc = "3.2.5"
derive_builder = "0.12.0"
etcd-client = "0.8.4"
evalexpr = "8.1.0"
flume = "0.10.14"
futures = "0.3.28"
futures-util = "0.3.28"
getset = "0.1.2"
graphql_client = "0.12.0"
handlebars = "4.3.6"
jsonwebtoken = "8.3.0"
log = "0.4.17"
mockall = "0.11.4"
notify = { version = "5.1.0", default-features = false }
num-derive = "0.3.3"
num-traits = "0.2.15"
opentelemetry = "0.17.0"
opentelemetry-otlp = "0.10.0"
postgres = "0.19.5"
proc-macro2 = "1.0.56"
prost = "0.9.0"
prost-types = "0.9.0"
quote = "1.0.26"
rand = "0.8.5"
rdkafka = "0.29.0"
redis = "0.23.0"
regex = "1.7.3"
reqwest = { version = "0.11.16", default-features = false }
reqwest-middleware = "0.2.1"
rusoto_core = { version = "0.48.0", default-features = false }
rusoto_s3 = { version = "0.48.0", default-features = false }
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
schemars = "0.8.12"
sea-orm = { version = "0.11.2", default-features = false }
sea-orm-migration = "0.11.2"
serde = "1.0.159"
serde_json = "1.0.95"
serde_yaml = "0.9.21"
syn = "1.0.109"
tar = "0.4.38"
task-local-extensions = "0.1.4"
thiserror = "1.0.40"
tokio = "1.27.0"
tonic = "0.6.2"
tonic-build = "0.6.2"
tracing = "0.1.37"
tracing-actix-web = "0.7.3"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.17.4"
tracing-subscriber = "0.3.16"
url = "2.3.1"
uuid = "1.3.1"
