[workspace]
resolver = "2"
members = [
  "app",
  "infrastructure/command",
  "domain/workflow",
  "domain/storage",
  "domain/content-repo",
  "service/workflow",
  "service/storage",
  "service/content-repo",
]

# WARNING: Replace all git links with registry packages before opening source
[workspace.dependencies.alice-architecture]
git = "https://github.com/kuintessence/alice"

[workspace.dependencies.database-model]
git = "https://github.com/kuintessence/database"

[workspace.dependencies.actix-i18n]
git = "https://github.com/kuintessence/actix-i18n.git"

[workspace.dependencies.alice-di]
git = "https://github.com/kuintessence/alice"
features = ["actix"]

[workspace.dependencies.alice-infrastructure]
git = "https://github.com/kuintessence/alice"
features = ["full"]

[workspace.dependencies.alice-web]
git = "https://github.com/kuintessence/alice"

[workspace.dependencies]
domain-workflow = { path = "domain/workflow" }
domain-storage = { path = "domain/storage" }
domain-content-repo = { path = "domain/content-repo" }
infrastructure-command = { path = "infrastructure/command" }
# async
async-trait = "0"
tokio = "1"
# log
tracing = "0.1"
# web
reqwest = { version = "0.11", default-features = false }
# data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1.5", features = ["v4", "serde"] }
# time
chrono = "0.4"
# code
typed-builder = "0.18"
# error
anyhow = "1"
thiserror = "1"
# number
num-traits = "0.2"
num-derive = "0.4"
# miscellaneous
rand = "0.8"
blake3 = "1.5"
schemars = "0.8"
handlebars = "4.4"
tar = "0.4"
dashmap = "5.5"
flume = "0.11"
futures = "0.3"
actix-web = { version = "4.3", features = ["rustls"] }
actix-http = "3.3"
actix-easy-multipart = "3.0"
actix-cors = "0.6"
actix-ws = "0.2"
config = "0.13"
sea-orm = { version = "0.12", default-features = false }
graphql_client = "0.13"
redis = "0.24"
colored = "2.0"
opendal = { version = "0.42", default-features = false }
mockall = "0.11"
once_cell = "1.18"
regex = "1.10"
url = "2.4"
indoc = "2.0.4"
