[package]
name = "computing-orchestration-system"
version = "0.1.0"
edition = "2021"

# WARNING: Replace all git links with registry packages before opening source
[dependencies.alice-di]
git = "https://github.com/kuintessence/alice"
features = ["actix"]

[dependencies.alice-infrastructure]
git = "https://github.com/kuintessence/alice"
features = ["full"]

[dependencies.alice-web]
git = "https://github.com/kuintessence/alice"

[dependencies]
alice-architecture = { workspace = true }
domain-workflow = { workspace = true }
domain-storage = { workspace = true }
domain-content-repo = { workspace = true }
service-workflow = { path = "../service/workflow" }
service-storage = { path = "../service/storage" }
service-content-repo = { path = "../service/content-repo" }
database-model = { workspace = true }
infrastructure-command = { workspace = true }
# concurrency
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dashmap = "5.5"
flume = "0.10"
futures = "0.3"
# web
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
actix-web = { version = "4.3", features = ["rustls"] }
actix-http = "3.3"
actix-easy-multipart = "3.0"
actix-cors = "0.6"
actix-ws = "0.2"
# error
anyhow = { workspace = true }
# log
tracing = { workspace = true }
tracing-actix-web = "0.7"
# time
chrono = { workspace = true }
# code
typed-builder = { workspace = true }
getset = "0.1"
# data
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
config = { version = "0.13", features = ["yaml"] }
sea-orm = { version = "0.11", default-features = false, features = [
  "runtime-actix-rustls",
  "sqlx-postgres",
] }
# repositories
graphql_client = { version = "0.12", features = ["reqwest-rustls"] }
redis = { version = "0.23", features = ["tokio-comp", "cluster"] }
# tui
colored = "2.0"

[dependencies.opendal]
version = "0.39.0"
default-features = false
features = ["services-s3"]
