[package]
name = "alice-architecture"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Error Implement
anyhow = { workspace = true }
# async trait
async-trait = { workspace = true }
# Serializable Trait
serde = { workspace = true, features = [ "derive" ] }
thiserror = { workspace = true }
alice-architecture-macro = { path = "../architecture-macro" }
[features]
default = [  ]
etcd = [  ]
