[package]
name = "alice-infrastructure"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing-subscriber = { workspace = true, features = [ "tracing-log", "env-filter" ], optional = true }
opentelemetry = { workspace = true, features = [ "rt-tokio" ], optional = true }
alice-architecture = { workspace = true }
base64 = { workspace = true }
actix-web = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
config = { workspace = true, features = [ "yaml" ] }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
async-trait = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
rdkafka = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
url = { workspace = true, optional = true }
reqwest = { workspace = true, features = [ "json", "rustls-tls" ], optional = true }
reqwest-middleware = { workspace = true, optional = true }
task-local-extensions = { workspace = true, optional = true }
flume = { workspace = true, optional = true }
getset = { workspace = true }
[build-dependencies]
cmake = { workspace = true, optional = true }
[features]
actix-middleware = [ "futures-util", "actix-web", "jsonwebtoken", "url", "reqwest" ]
reqwest-middleware = [ "dep:reqwest-middleware", "reqwest", "task-local-extensions", "tokio/time", "tokio/macros", "async-trait" ]
hosting = [  ]
kafka-mq = [ "rdkafka/cmake-build", "cmake", "async-trait" ]
flume-mq = [ "flume", "async-trait", "tokio/rt" ]
sea-orm-db = [ "sea-orm" ]
telemetry = [ "tracing", "tracing-opentelemetry", "tracing-log", "tracing-subscriber", "opentelemetry", "opentelemetry-otlp", "tracing-appender" ]
full = [ "sea-orm-db", "kafka-mq", "actix-middleware", "telemetry", "hosting", "flume-mq", "reqwest-middleware" ]
