[package]
name = "alice-web-macro"
version = "0.1.0"
edition = "2021"
[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = { workspace = true, features = [ "full", "extra-traits" ] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
