[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies.alice-infrastructure]
workspace = true
features = ["telemetry"]

[dependencies.alice-di]
workspace = true

[dependencies]
domain = { path = "../domain", package = "domain-agent" }
service = { path = "../service", package = "service-agent" }
# alice
alice-architecture = { workspace = true }
# async
async-trait = { workspace = true }
tokio = { version = "1", features = ["full"] }
bytes = "1.4"
futures = "0.3"
flume = "0.10"
# log
tracing = "0.1"
log = "0.4"
# data
config = { version = "0.13", features = ["yaml"] }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytesize = { version = "1.2", features = ["serde"] }
csv = "1.2"
# error
anyhow = { workspace = true }
thiserror = "1.0"
# web
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "multipart",
  "stream",
  "rustls-tls",
] }
url = "2.3"
base64-url = "2.0"
# middlewares
rdkafka = "0.29"
# system
notify = { version = "5.1", default-features = false, features = [
  "macos_fsevent",
] }
rustix = { version = "0.38", default-features = false, features = ["fs"] }
# test
mockall = "0.11"
# TUI
colored = "2.0"
crossterm = "0.27"
# miscellaneous
chrono = { workspace = true }
regex = { workspace = true }
blake3 = "1.3"
rand = "0.8"
# code
typed-builder = { workspace = true }
indoc = "2"

[build-dependencies]
cmake = "0.1"
