[package]
name = "database-migration"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sea-orm-migration = { workspace = true }
alice-architecture = { workspace = true }
database-model = { workspace = true }
# sea orm migration
tokio = { workspace = true, features = [ "full" ] }
config = { workspace = true }
clap = { workspace = true, features = [ "derive" ] }
anyhow = { workspace = true }
