[package]
name = "domain-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
alice-architecture = { workspace = true }
database-model = { workspace = true }
# error
anyhow = { workspace = true }
thiserror = "1.0"
# time
chrono = { workspace = true, features = ["serde"] }
# number
num-traits = { workspace = true }
num-derive = "0.3"
# data
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
mockall = "0.11"
